--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "app_simple.py",
+      "src": "app.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "app_simple.py"
+      "dest": "app.py"
     }
-  ]
-} 
+  ],
+  "env": {
+    "PYTHONPATH": "."
+  }
+}
