--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-requests
-beautifulsoup4
-vaderSentiment
-flask
-flask-cors
+Flask==2.3.2
+flask-cors==3.0.10
+vaderSentiment==3.3.2
+selenium==4.11.2
+beautifulsoup4==4.12.2
+webdriver-manager==4.0.1
+gunicorn==21.2.0
